--- a/product-manager.html
+++ b/product-manager.html
@@ -40,8 +40,26 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://jobs.smartrecruiters.com/goldstonepartners/743999698659538-associate-product-owner'>Goldstone Partners, Inc. Associate Product Owner | SmartRecruiters</a></h5> 
+<h5><a href='https://elsewhen.recruitee.com/o/senior-product-manager'>
+      Senior Product Manager - Elsewhen
+    </a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://elsewhen.recruitee.com/o/contract-senior-product-manager-london'>
+      Contract Senior Product Manager - Elsewhen
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-11-01</p>
+<hr/>
+<h5><a href='https://dribbble.com/jobs/25650-Senior-Product-Designer?source=feed'>
+      Senior Product Designer at Dynamic Signal - San Bruno, CA - Dribbble Design Jobs
+  </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
+<h5><a href='https://jobs.smartrecruiters.com/goldstonepartners/743999698659538-associate-product-owner'>Goldstone Partners, Inc. Associate Product Owner | SmartRecruiters</a></h5> 
+<p><span class="badge badge-light">Boulder Boulder</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/trunkclub/jobs/1945608'>Job Application for Sr Product Manager at Trunk Club</a></h5> 
@@ -76,7 +94,7 @@
 <p><span class="badge badge-light">Ontario, Canada</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/25616-Product-Designer?source=twitter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/25616-Product-Designer?source=twitter'>
       Product Designer at Dynamic Signal - San Bruno, CA - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light"></span></p>
@@ -128,7 +146,7 @@
 <p><span class="badge badge-light">Montreal, Canada</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Gameloft/743999698653555-chef-de-produit-marketing-marketing-product-manager'>Gameloft Chef de produit Marketing - Marketing Product Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Gameloft/743999698653555-chef-de-produit-marketing-marketing-product-manager'>Gameloft Chef de produit Marketing - Marketing Product Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Montreal, QCCanada</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -202,11 +220,11 @@
 <p><span class="badge badge-light">Charlotte, NC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/carta/dacbc491-26ea-4d98-ba04-855a2fc8d5db'>Carta - Lead Product Manager, Data Platform</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/carta/dacbc491-26ea-4d98-ba04-855a2fc8d5db'>Carta - Lead Product Manager, Data Platform</a></h5> 
 <p><span class="badge badge-light">Seattle, WA  San Francisco Palo Alto Seattle New York City</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/connectedfitness/jobs/1939963'>Job Application for Product Designer at Under Armour </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/connectedfitness/jobs/1939963'>Job Application for Product Designer at Under Armour </a></h5> 
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -214,7 +232,7 @@
 <p><span class="badge badge-light">Berkeley, CA</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://elevate-security.breezy.hr/p/6cb3ed84968b-senior-product-manager-integrations'>Senior Product Manager (Integrations) at Elevate Security</a></h5> 
+<h5><a href='https://elevate-security.breezy.hr/p/6cb3ed84968b-senior-product-manager-integrations'>Senior Product Manager (Integrations) at Elevate Security</a></h5> 
 <p><span class="badge badge-light">Montreal, QC</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -238,7 +256,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/coupang/jobs/1829366'>Job Application for Principal, Product Owner (FinTech Business & Systems) at Coupang</a></h5> 
+<h5><a href='https://boards.greenhouse.io/coupang/jobs/1829366'>Job Application for Principal, Product Owner (FinTech Business & Systems) at Coupang</a></h5> 
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -274,7 +292,7 @@
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/discord/jobs/4002985002'>Job Application for Product Manager, Internal Products at Discord</a></h5> 
+<h5><a href='https://boards.greenhouse.io/discord/jobs/4002985002'>Job Application for Product Manager, Internal Products at Discord</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -320,7 +338,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/revolut/445aa98c-dd62-49ad-a217-f9f21c8c3bb1'>Revolut - Product Designer - Wealth & Trading (copy)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/revolut/445aa98c-dd62-49ad-a217-f9f21c8c3bb1'>Revolut - Product Designer - Wealth & Trading (copy)</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -338,7 +356,7 @@
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://vizrt.applytojob.com/apply/dEdGNsUPpl/Product-Manager-Pro-AV-NewTek'>Product Manager, Pro A/V (NewTek) - Vizrt - Career Page</a></h5> 
+<h5><a href='http://vizrt.applytojob.com/apply/dEdGNsUPpl/Product-Manager-Pro-AV-NewTek'>Product Manager, Pro A/V (NewTek) - Vizrt - Career Page</a></h5> 
 <p><span class="badge badge-light">San Antonio, TX</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -346,7 +364,7 @@
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698611876-product-manager-for-global-sportswear-brand'>Aroghia Group Product Manager for Global Sportswear Brand | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/AroghiaGroup/743999698611876-product-manager-for-global-sportswear-brand'>Aroghia Group Product Manager for Global Sportswear Brand | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Beaverton, OR, USA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -370,7 +388,7 @@
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Visa/743999698610581-senior-technical-product-manager-machine-learning-data-platform-team'>Visa Senior Technical Product Manager, Machine Learning - Data Platform Team | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Visa/743999698610581-senior-technical-product-manager-machine-learning-data-platform-team'>Visa Senior Technical Product Manager, Machine Learning - Data Platform Team | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Palo Alto, CA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -382,7 +400,7 @@
 <p><span class="badge badge-light">Alpharetta, GA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='http://medbridge.applytojob.com/apply/am6o2wHuzq/Product-Manager-Mobile-Lehi-UT'>Product Manager - Mobile  (Lehi, UT) - MedBridge - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://medbridge.applytojob.com/apply/am6o2wHuzq/Product-Manager-Mobile-Lehi-UT'>Product Manager - Mobile  (Lehi, UT) - MedBridge - Career Page</a></h5> 
 <p><span class="badge badge-light">Seattle Lehi, UT     Seattle, WA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -390,7 +408,7 @@
 <p><span class="badge badge-light">Seattle, WASeattle Seattle, WASeattle, WA     Seattle, WA</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://www.sonetjob.com/job/offer?id=43abe6eb2067e3ad&tc=jo-tw'>SonetJob | Offre d'emploi - Recherche et D?veloppement - Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.sonetjob.com/job/offer?id=43abe6eb2067e3ad&tc=jo-tw'>SonetJob | Offre d'emploi - Recherche et D?veloppement - Product Manager</a></h5> 
 <p><span class="badge badge-light">Toronto</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -398,7 +416,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/upgrade/0ab79d4c-5943-4181-a929-d15bf578bb45'>Upgrade - Product Manager</a></h5> 
+<h5><a href='https://jobs.lever.co/upgrade/0ab79d4c-5943-4181-a929-d15bf578bb45'>Upgrade - Product Manager</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -406,7 +424,7 @@
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/tenable-network-security/job/o9Tsbfwp'>Tenable Careers - Senior Product Manager</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/tenable-network-security/job/o9Tsbfwp'>Tenable Careers - Senior Product Manager</a></h5> 
 <p><span class="badge badge-light">Columbia, Maryland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -434,20 +452,8 @@
 <p><span class="badge badge-light">?le-de-France, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698595134-product-manager-mkg'>Ubisoft Product Manager MKG | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999698595134-product-manager-mkg'>Ubisoft Product Manager MKG | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Montreal, Canada  Montreal</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Proprioo/743999698595366-product-manager-h-f-'>Proprioo Product Manager (H/F) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">?le-de-France, France</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/digitaltrends/jobs/4429989002'>Job Application for Product Manager at Digital Trends</a></h5> 
-<p><span class="badge badge-light">Portland, OR  ?  Portland, Oregon New York City Chicago Los Angeles</span></p>
-<p>Posted on: 2019-10-31</p>
-<hr/>
-<h5><a href='https://kiperformance.join.com/jobs/474164-product-owner-m-f-x'>Job @ KI Group (Cologne): Product Owner (m/f/x) | JOIN</a></h5> 
-<p><span class="badge badge-light">Cologne, Germany</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 
